# multihome

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.in  multihome.c  multihome.h  tests.c  tests.h
.circleci/: config.yml
.github/workflows/: cmake.yml
init/: init.csh  init.sh
